--- a/css/menu.css
+++ b/css/menu.css
@@ -4,6 +4,10 @@
 
 /* ===================MENU=================== */
 
+:root{
+  --overlay-color: rgba(24, 39, 51, 0.85);
+  --menu-speed: 0.75s;
+}
 
 .menu-wrap {
   position: fixed;
