--- a/css/menu.css
+++ b/css/menu.css
@@ -47,7 +47,7 @@
   position: relative;
   width: 100%;
   height: 2px;
-  background-color: #fff;
+  background-color: #5C697A;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +62,7 @@
   top: -10px;
   width: 100%;
   height: 2px;
-  background-color: #fff;
+  background-color: #5C697A;
 }
 
 /* Moves line down  */
