--- a/css/main.css
+++ b/css/main.css
@@ -224,3 +224,30 @@ body{
   width: 90%;
   margin: auto;
 }
+
+
+/* ========================MODAL========================== */
+
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0 , 0, 0.5);
+}
+
+.modal-content{
+  background-color: #fff;
+  width: 90%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
+}
