--- a/css/main.css
+++ b/css/main.css
@@ -251,3 +251,13 @@ body{
   margin: auto;
   box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
 }
+
+.modal-img-view{
+  width: 90%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
+}
+
+.modal-p{
+  text-align: center;
+  padding: 0 .5em 1em .5em;
+}
