--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,10 @@ body{
   scroll-behavior: smooth;
 }
 
+a {
+  text-decoration: none;
+  color: #fff;
+}
 
 /* ========================HEADER====================== */
 
@@ -260,4 +264,43 @@ body{
 .modal-p{
   text-align: center;
   padding: 0 .5em 1em .5em;
+}
+
+.close-modal {
+  text-align: center;
+  border: 1px solid grey;
+  border-radius: 3px;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  width: 80px;
+  padding: 4px 10px 4px 10px;
+  color: #fff;
+  background-color: #283845;
+}
+
+/* .modal-buttons{
+  display: flex;
+  justify-content: space-between;
+} */
+
+.github-button{
+  text-align: center;
+  border: 1px solid #9B91A3;
+  border-radius: 3px;
+  margin-bottom: 2em;
+  margin-right: 1em;
+  width: 100px;
+  padding: 5px 11px 5px 11px;
+  background-color: #493657;
+}
+
+.liveproject-button{
+  text-align: center;
+  border: 1px solid #B4D397;
+  border-radius: 3px;
+  margin-bottom: 2em;
+  margin-left: 1em;
+  width: 100px;
+  padding: 5px 11px 5px 11px;
+  background-color: #76B041;
 }
