--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ a {
 }
 
 .about-me p {
+  text-align: center;
   font-weight: lighter;
   line-height: 1.5;
 }
@@ -311,7 +312,7 @@ a {
   grid-template-rows: repeat(1, minmax(300px, 1fr));
   background: url('../img/test.jpg') no-repeat center center/cover;
   margin-top: 5em;
-  opacity: .8;
+  opacity: .92;
 }
 
 
