--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,12 @@ a {
   color: #fff;
 }
 
+
 /* ========================HEADER====================== */
 
-
+.desktop-menu{
+  display: none;
+}
 
 .container{
   max-width: 960px;
@@ -251,6 +254,9 @@ a {
   width: 90%;
   height: 500px;
   display: flex;
+  border-bottom-left-radius: 20%;
+  border-bottom: 1px solid #E6E8E6;
+  border-left: 1px solid #E6E8E6;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -259,48 +265,52 @@ a {
 }
 
 .modal-img-view{
+  margin-top: 1em;
   width: 90%;
   box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
 }
 
 .modal-p{
+  font-weight: lighter;
   text-align: center;
   padding: 0 .5em 1em .5em;
 }
 
 .close-modal {
   text-align: center;
-  border: 1px solid grey;
+  border: 1px solid black;
   border-radius: 3px;
   margin-top: 1em;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   width: 80px;
-  padding: 4px 10px 4px 10px;
-  color: #fff;
-  background-color: #283845;
+  height: 30px;
+  color: black;
+  background-color: #fff;
 }
 
 
 .github-button{
   text-align: center;
-  border: 1px solid #9B91A3;
+  border: 1px solid white;
   border-radius: 3px;
   margin-bottom: 2em;
   margin-right: 1em;
-  width: 100px;
+  width: 110px;
+  height: 30px;
   padding: 5px 11px 5px 11px;
   background-color: #493657;
 }
 
 .liveproject-button{
   text-align: center;
-  border: 1px solid #B4D397;
+  border: 1px solid white;
   border-radius: 3px;
   margin-bottom: 2em;
   margin-left: 1em;
-  width: 100px;
+  width: 110px;
+  height: 30px;
   padding: 5px 11px 5px 11px;
-  background-color: #76B041;
+  background-color: #556F44;
 }
 
 
@@ -323,6 +333,7 @@ a {
 }
 
 .contact-container > * {
+  font-weight: lighter;
   color: #fff;
 }
 
@@ -337,4 +348,156 @@ a {
   justify-content: flex-end;
   margin-right: 1em;
   margin-bottom: 1em;
+}
+
+
+/* ========================TABLET-VIEW========================== */
+
+@media (min-width: 768px){
+
+  .certifi-img{
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .modal-content{
+    height: 700px;
+  }
+
+}
+
+
+/* ========================DESKTOP-VIEW========================== */
+
+@media (min-width: 1024px) {
+
+.desktop-menu{
+  display: block;
+  margin-right: 1em;
+  padding-top: 1em;
+}
+
+.desktop-menu ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+.desktop-menu ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.desktop-menu ul li a {
+  padding-right: 1.7em;
+  font-size: 1.2em;
+  font-family: 'Cinzel', serif;
+  transition: .85s;
+}
+
+.desktop-menu ul li a:hover {
+  transform: fadein 1s linear;
+  color: black;
+}
+
+.desktop-menu ul li a:active {
+  color: #5F1A37;
+}
+
+.menu-wrap {
+  display: none;
+}
+
+/* ===========================ABOUT ME========================== */
+
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
+}
+
+
+.profile-skills {
+  grid-row: 1 / 1;
+  grid-column: 2 / 2;
+  background-color: #FAFBFA;
+  padding: 0 1em 0 1em;
+  margin-right: 3em;
+  width: 700px;
+  height: 250px;
+  -webkit-clip-path: polygon(0 5%, 100% 6%, 100% 100%, 3% 92%);
+  clip-path: polygon(0 5%, 100% 6%, 100% 100%, 3% 92%);
+}
+
+.skills {
+  grid-row: 2 / 2;
+  grid-column: 1 / 3;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  width: 90%;
+  margin: auto;
+}
+
+
+.certifi{
+  grid-row: 3 / 3;
+  grid-column: 1 / 3;
+  width: 90%;
+  margin: auto;
+}
+
+.certifi-img{
+  display: block;
+  width: 35%;
+}
+
+
+.project-list{
+  margin-top: 3em;
+  width: 40%;
+  margin: auto;
+}
+
+
+
+/* =========================MODAL============================= */
+
+.modal-content{
+  width: 800px;
+}
+
+.github-button{
+  box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
+  transition: .7s;
+  border: black;
+}
+
+.liveproject-button{
+  box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
+  transition: .7s;
+  border: black;
+}
+
+.liveproject-button:hover{
+  background-color: #386C0B;
+}
+
+.github-button:hover{
+  background-color: #69306D;
+  border: black;
+}
+
+.close-modal{
+  box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
+  transition: .7s;
+}
+
+.close-modal:hover{
+  background-color: #BBB8B2;
+  border: white;
+  color: white;
+}
+
+
 }
