--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,9 @@ a {
 }
 
 .certifi-img{
-  width: 100%;
+  display: block;
+  margin: auto;
+  width: 90%;
 }
 
 /* =====================PROJECTS===================== */
@@ -499,7 +501,7 @@ a {
 
 .close-modal:hover{
   background-color: #BBB8B2;
-  border: white;
+  border: black;
   color: white;
 }
 
