--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,6 @@ a {
 .skill-li {
   text-align: center;
   font-size: 1.1em;
-  text-decoration: underline;
   padding-bottom: .5em;
 }
 
@@ -250,7 +249,7 @@ a {
 
 .modal-content{
   background-color: #fff;
-  width: 90%;
+  width: 93%;
   height: 500px;
   display: flex;
   border-bottom-left-radius: 20%;
@@ -294,7 +293,7 @@ a {
   border-radius: 3px;
   margin-bottom: 2em;
   margin-right: 1em;
-  width: 110px;
+  width: 120px;
   height: 30px;
   padding: 5px 11px 5px 11px;
   background-color: #493657;
@@ -306,7 +305,7 @@ a {
   border-radius: 3px;
   margin-bottom: 2em;
   margin-left: 1em;
-  width: 110px;
+  width: 120px;
   height: 30px;
   padding: 5px 11px 5px 11px;
   background-color: #556F44;
@@ -397,7 +396,7 @@ a {
   padding-right: 1.7em;
   font-size: 1.2em;
   font-family: 'Cinzel', serif;
-  transition: .85s;
+  transition: fadein .85s;
 }
 
 .desktop-menu ul li a:hover {
@@ -438,8 +437,12 @@ a {
   grid-column: 1 / 3;
   border-bottom: 1px solid black;
   border-top: 1px solid black;
-  width: 90%;
+  width: 40%;
   margin: auto;
+}
+
+.skill-ul li:nth-last-child(1){
+  padding-bottom: 2em;
 }
 
 
