--- a/css/main.css
+++ b/css/main.css
@@ -453,7 +453,7 @@ a {
 .certifi{
   grid-row: 3 / 3;
   grid-column: 1 / 3;
-  width: 90%;
+  width: 40%;
   margin: auto;
 }
 
@@ -464,104 +464,17 @@ a {
 
 
 .project-list{
-  display: none;
-  /* margin-top: 3em;
+  margin-top: 3em;
   width: 40%;
-  margin: auto; */
+  margin: auto;
 }
 
-
-.desktop-project-container{
-  display: grid;
-  grid-template-columns: repeat(2, minmax(300px, 1fr));
-  grid-template-rows: repeat(5, minmax(300px, 1fr));
-  grid-gap: 10px;
-}
-
-.desktop-project-img{
-  width: 450px;
-  box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
-  transition: .5s;
-}
-
-.desktop-project-img:hover{
-  transform: scale(1.05);
-  opacity: .7;
-}
-
-.left1{
-  grid-column: 1 / 1;
-  grid-row: 2 / 2;
-}
-
-.right1{
-  grid-column: 2 / 2;
-  grid-row: 2 / 2;
-}
-
-.right2{
-  grid-column: 2 / 2;
-  grid-row: 3 / 3;
-}
-
-.left2{
-  grid-column: 1 / 1;
-  grid-row: 3 / 3;
-}
-
-.right3{
-  grid-column: 2 / 2;
-  grid-row: 4 / 4;
-}
-
-.left3{
-  grid-column: 1 / 1;
-  grid-row: 4 / 4;
-}
-
-.right4{
-  grid-column: 2 / 2;
-  grid-row: 5 / 5;
-}
-
-.left4{
-  grid-column: 1 / 1;
-  grid-row: 5 / 5;
-}
-
-.left1,
-.left2,
-.left3,
-.left4{
-  margin-left: 3em;
-
-}
-
-.right1,
-.right2,
-.right3,
-.right4 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-right: 2em;
-  width: 90%;
-  text-align: center;
-}
-
-.desktop-buttons{
-  margin-top: 1em;
-}
-
-#projecth2{
-  grid-column: 1 / 3;
-  grid-row: 1 / 1;
-}
 
 /* =========================MODAL============================= */
 
 .modal-content{
-  width: 800px;
+  width: 700px;
+  height: 95%;
 }
 
 .github-button{
