--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 }
 @-moz-keyframes fadein {
   from { opacity: 0;}
-  to { opacity: 1; height: 75%;}
+  to { opacity: 1;}
 }
 @keyframes fadein {
   from { opacity: 0;}
