--- a/css/main.css
+++ b/css/main.css
@@ -477,14 +477,24 @@ a {
 
 .certifi{
   grid-row: 3 / 3;
-  grid-column: 1 / 3;
-  width: 40%;
+  grid-column: 1 / 4;
+  width: 70%;
   margin: auto;
 }
 
-.certifi-img{
-  width: 500px;
+.frontendCerti{
+  width: 40%;
+  font-size: 1.2em;
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px solid black;
+  margin: auto;
+  padding-bottom: .4em;
+}
 
+.certifi-img{
+  width: 90%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0 , 0, 0.2), 0 7px 20px 0 rgba(0, 0 , 0 , 0.17);
 }
 
 .skill-ul-project{
